[gd_scene format=3 uid="uid://0k4iaeeb2hhh"]

[ext_resource type="Texture2D" uid="uid://2c3dlvukt1yw" path="res://assets/componentes/fuel_pickup.png" id="1_nifv7"]
[ext_resource type="Script" uid="uid://dn0src3pl31gn" path="res://componentes/fuel_pickup.gd" id="1_rb3n8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nifv7"]

[sub_resource type="Animation" id="Animation_rb3n8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FuelPickup:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cfooh"]
resource_name = "active"
length = 0.10001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FuelPickup:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_nifv7"]
resource_name = "inactive"
length = 2.2500083
step = 0.083333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FuelPickup:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 2.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.20784314), Color(1, 1, 1, 0.20784314), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rb3n8"]
_data = {
&"RESET": SubResource("Animation_rb3n8"),
&"active": SubResource("Animation_cfooh"),
&"inactive": SubResource("Animation_nifv7")
}

[node name="fuel_pickup" type="Area2D" unique_id=956028455]
collision_layer = 4
script = ExtResource("1_rb3n8")

[node name="collision" type="CollisionShape2D" parent="." unique_id=227653732]
visible = false
shape = SubResource("CircleShape2D_nifv7")

[node name="FuelPickup" type="Sprite2D" parent="." unique_id=1225988630]
texture = ExtResource("1_nifv7")

[node name="animation" type="AnimationPlayer" parent="." unique_id=1679933271]
libraries/ = SubResource("AnimationLibrary_rb3n8")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="animation" to="." method="_on_animation_animation_finished"]
